bin_PROGRAMS = tinysshd-convertkey
man8_MANS = tinysshd-convertkey.8
tinysshd_convertkey_SOURCES = tinysshd-convertkey.c \
													base64.h base64.c \
													buffer.h buffer.c \
													fileio.h fileio.c \
													openssh-key.h openssh-key.c \
													openssh-parse.h openssh-parse.c \
													utilities.h utilities.c \
													errors.h \
													statuscodes.h
CFLAGS += -s -Os
